--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/form-field.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/form-field.tml
@@ -66,7 +66,7 @@
 				<tml:option name="attributes"/>
 			</tml:input>
 			<tml:case condition="tmlform.hasmessage(_field)">
-	    		<tml:script expression="tmlform.getmessage(_field)"/>
+	    		<tml:script expression="tmlform.getmessage(_field)" wrap="div"/>
 	    	</tml:case>
 			
 			</tml:{div}>
