--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
@@ -49,7 +49,6 @@
 						options: pages
 					}]				
 			</tml:script>
-			<tml:comment><tml:[form-field] o_label="Position" o_name="position" o_type="select" o_options="Am Anfang der Liste|start,Am Ende der Liste|end"/></tml:comment>
 			<tml:[form-field] o_label="Position" o_name="position" o_type="select" o-optionvalues="_opts" o-optgroups="_optgroups"/>
 		</tml:case>
 		
@@ -62,7 +61,7 @@
 			<tml:[form-field]>
 				<tml:input labeled="true" name="publish" type="boolean" options="Seite(n) veröffentlichen|true"/>
 				<br>
-				<tml:input labeled="true" name="recursive" type="boolean" options="Unterseiten kopieren|true"/>
+				<tml:input labeled="true" name="recursive" type="boolean" options="[Unterseiten kopieren|true{item('$mc.isDestChildrenOfSource')?'$disabled':''}]"/>
 			</tml:[form-field]>
 		</tml:case>
 
