#00006033: CM-Neo admin view shows wrong default language

--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/languages/mode-view.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/languages/mode-view.tml
@@ -6,7 +6,7 @@
 
 <div class="content">
 	<tml:script>
-		_defaultLang = db().getDefaultLanguage()
+		_defaultLang = db($option_dbkey).getDefaultLanguage()
 		_langs = WGA.createList()
 		var langs = db($option_dbkey).getLanguages().values();
 		for(let lang in Iterator(langs))
