#00006034: Unable to clean trash via admin UI when pages are read protected

--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/trash/portlet.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/trash/portlet.tml
@@ -15,7 +15,7 @@
 				<div class="row">
 					<div class="col">
 						<a href="#" data-wgakey="<tml:item name="_doc.structKey"/>">
-							<tml:item name="_doc.title"/>
+							<tml:script expression="_doc.title || '- keine Leseberechtigung -'"/>
 						</a>
 					</div>
 					<div class="col"><tml:item name="_doc.contentType.name"/></div>
