--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/publish-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/publish-page.tml
@@ -94,7 +94,7 @@
 			</script>
 
 			<tml:[form-field] o_label="Sichtbar ab">
-				<div class="clear-field-wrapper<tml:case condition="tmlform.validfrom"> col-sm-8</tml:case>">
+				<div class="clear-field-wrapper<tml:case condition="tmlform.validfrom || VALIDFROM"> col-sm-8</tml:case>">
 					<tml:input type="date" name="validfrom" meta="true" cssclass="date form-control" html_placeholder="sofort" format="dd.MM.yyyy"/>
 					<a class="clear-field" style="display:none">&times;</a>
 				</div>
@@ -109,7 +109,7 @@
 			</tml:[form-field]>
 			
 			<tml:[form-field] o_label="Sichtbar bis">
-				<div class="clear-field-wrapper<tml:case condition="tmlform.validto"> col-sm-8</tml:case>">
+				<div class="clear-field-wrapper<tml:case condition="tmlform.validto || VALIDTO"> col-sm-8</tml:case>">
 					<tml:input type="date" name="validto" meta="true" cssclass="date form-control" html_placeholder="unbegrenzt" format="dd.MM.yyyy"/>
 					<a class="clear-field" style="display:none">&times;</a>
 				</div>
