--- a/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/login.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/bootstrap/login.tml
@@ -34,7 +34,7 @@
 	}
 </tml:action>
 
-<tml:include ref="page" o_title="[{WGA.Brand.name} Content Manager Login]">
+<tml:include ref="page" o_title="[{WGA.Brand.name} Content Manager Anmeldung]">
 	<div class="splash">
 
 		<img class="logo" src="<tml:url type="static" file="images/brand/logo_600.png"/>">
@@ -47,8 +47,8 @@
 			</tml:script>
 			
 			<tml:if istrue="$option_dbkey_auto_selected">
-				<tml:then><h1>Anmelden als Website-Autor</h1></tml:then>
-				<tml:else><h1>Anmelden an Website <tml:item name="dbkey" type="portlet"/></h1></tml:else>
+				<tml:then><h1>Anmelden als Autor</h1></tml:then>
+				<tml:else><h1>Anmelden an <tml:script expression="WGA.app(portlet.dbkey).db().title"/></h1></tml:else>
 			</tml:if>
 			
 			<tml:case condition="tmlform.hasmessages()">
