#00006056: CM-Neo Admin view: Icon "back to website" invalid if womodo does not run im ROOT context

--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/toolbar.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/toolbar.tml
@@ -1,7 +1,7 @@
 <div id="toolbars" style="display:block">
 	<div class="toolbar" style="left:10px">
 		<a class="btn button" data-action="back-to-website" href="#">
-			<img class="icon" src="/static/images/brand/icon_32.png">
+			<img class="icon" src="<tml:url type="static" file="images/brand/icon_32.png"/>">
 			<div class="text">
 				Zurück zur Website ...
 			</div>
