#00006059: CM-Neo CSS cleanup

--- a/OpenWGA/plugins/cm-neo/design/tml/html/main.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/main.tml
@@ -5,7 +5,7 @@
 	<div id="heading-helper-css" style="display:none">
 
 		h1:before,h2:before,h3:before,h4:before,h5:before,h6:before{
-			background: #286090;
+			background: #337ab7;
 			color: white;
 			padding: 0 2px;
 			margin-right: 2px;
