--- a/OpenWGA/plugins/cm-neo/design/tml/html/page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/page.tml
@@ -1,5 +1,5 @@
 <div id="page" data-accesslevel="<tml:item name="$option_accesslevel"/>" <tml:case hasoptions="appnav">class="appnav"</tml:case>>
-	<div id="header" class="btn-primary">
+	<div id="header">
 		<tml:option name="header"/>
 		<tml:case hasoptions="title">
 			<div class="title"><tml:option name="title"/></div>
