#00006063: Module "tiles" not presented as columns in non-responsive designs

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render.tml
@@ -6,7 +6,11 @@
 		var w = CMM.setting("width", id.getText()) || "1";
 		_total += Number(w);
 	}
-	_class= CMM.setting('responsive') || "clear";
+	
+	if(WGA.design(db()).getGlobal("RESPONSIVE"))
+		_class= CMM.setting('responsive') || "clear";
+	else _class="keep";		// layout is not responsive
+	 
 </tml:script>
 
 <div class="tiles <tml:item name="_class"/>">
