--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
@@ -102,6 +102,9 @@
 			<fieldset>
 				<legend>
 					<a href="#" data-dialog="page-settings:render" title="Seiteneigenschaften bearbeiten">Seite</a>
+						{{#page_disabled}}
+							<span style="color:red">(Nicht sichtbar)</span>
+						{{/page_disabled}}
 				</legend>
 				<div class="form-group">
 					<p class="data">
