--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-properties.tml
@@ -163,7 +163,7 @@
 			{{/validations.length}}
 
 			{{#custom}}
-				<fieldset>
+				<fieldset class="clip">
 					<legend>{{{legend}}}</legend>
 					{{#fields}}
 						<div class="form-group" {{#important}}style="color:red"{{/important}}>
