#00006079: Module "collection" layout "tiles": corrected html encoding

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/layout/tiles.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/collections/layout/tiles.tml
@@ -5,7 +5,7 @@
 >
 	<div class="tile">
 		<a href="<tml:url/>" class="content">
-			<div class="bg" style="<tml:item name="$mc.bg_image_style"/>"></div>
+			<div class="bg" style="<tml:item name="$mc.bg_image_style" encode="none"/>"></div>
 			<p class="title"><tml:script expression="BROWSERTITLE||TITLE" encode="html"/></p>
 			<p class="intro"><tml:meta name="DESCRIPTION"/></p>
 		</a>
