#00006085: Content Module "image wall": added check if file exists

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image-wall/render.tml
@@ -15,15 +15,16 @@
 		if(!file)
 			continue;
 			
-		var context = null;
+		var ctx = null;
 		if(!source)
-			context= CMM.settingSource()=="template" ? CMM.getTemplateContextPath() : "this";
-		else context='db:'+dbkey+'/docid:'+sourcedoc
-
-		_images.add({
-			context: context,
-			filename: file
-		})
+			ctx= CMM.settingSource()=="template" ? CMM.getTemplateContextPath() : "this";
+		else ctx = 'db:'+dbkey+'/docid:'+sourcedoc
+		
+		if(context(ctx, false) && context(ctx).content().hasFile(file))
+			_images.add({
+				context: ctx,
+				filename: file
+			})
 	}
 	
 	_usage = "usage=poster";
