#00006094: Added check when deleting files

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-attachments.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-attachments.tml
@@ -19,15 +19,41 @@
 </div>
 
 <div class="content">
-	Möchten Sie die folgenden Dateianhänge löschen?
 	<tml:script>
 		_filenames = (request.getParameter("filenames")||"").split(",")
+
+		// check if some file is used in content modules
+		var settingsValues = CMM.getContentModulesSettingsData(content()).values();
+		_usedFiles=WGA.List();
+		for(let [index, filename] in _filenames){
+		
+			for(let value in Iterator(settingsValues)){
+				if(value instanceof java.util.List){
+					if(value.contains(filename))
+						_usedFiles.add(filename)
+				}
+				else if(value==filename)
+					_usedFiles.add(filename)
+			}
+
+		}
 	</tml:script>
+	Möchten Sie die folgenden Dateianhänge löschen?
 	<ul>
 		<tml:foreach item="_filenames" currentvalue="_filename">
 			<li><tml:item name="_filename"/></li>
 		</tml:foreach>
 	</ul>
+	<tml:case if="_usedFiles.size">
+		<hr>
+		<b style="color:red">ACHTUNG:</b>
+		<br>Die folgenden zu löschenden Dateien werden derzeit noch in Inhaltsmodulen auf dieser Seite verwendet:
+		<ul>
+			<tml:foreach item="_usedFiles" currentvalue="_filename">
+				<li><tml:item name="_filename"/></li>
+			</tml:foreach>
+		</ul>
+	</tml:case>
 </div>
 
 <div class="footer">
