#00006096: Added form validation hints to dialog create-page

--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/form.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/form.tml
@@ -61,35 +61,42 @@
 	
 </tml:script>
 
-<tml:case istrue="_isValid">
+<tml:if istrue="_isValid">
+	<tml:then>
+		
+		<tml:[form-field] o_label="Seitentyp" 
+			o_type="select" 
+			o_field="contenttype" 
+			o_optionsitem="_pagetypes" 
+			o_mode="{$option_dialog_options.pagetype || _pagetypes.size()==1 ? 'view':'edit'}"
+			o_changeaction="$refresh"
+		/>
+		
+		<tml:[form-field] o_label="Sprache" 
+			o_type="select" 
+			o_field="language" 
+			o_optionsitem="_languages" 
+			o_changeaction="$refresh"
+			o_mode="{_languages.size()>1?'edit':'view'}"
+		/>
 	
-	<tml:[form-field] o_label="Seitentyp" 
-		o_type="select" 
-		o_field="contenttype" 
-		o_optionsitem="_pagetypes" 
-		o_mode="{$option_dialog_options.pagetype || _pagetypes.size()==1 ? 'view':'edit'}"
-		o_changeaction="$refresh"
-	/>
+		<tml:[form-field] o_label="Vorlage" if="$mc.templates.size"
+			o_type="select" 
+			o_field="template" 
+			o-optionvalues="$mc.templates" 
+		/>	
 	
-	<tml:[form-field] o_label="Sprache" 
-		o_type="select" 
-		o_field="language" 
-		o_optionsitem="_languages" 
-		o_changeaction="$refresh"
-		o_mode="{_languages.size()>1?'edit':'view'}"
-	/>
-
-	<tml:[form-field] o_label="Vorlage" if="$mc.templates.size"
-		o_type="select" 
-		o_field="template" 
-		o-optionvalues="$mc.templates" 
-	/>	
-
-	<tml:[form-field] o_label="Titel" o_field="title"
-		o_validation="$E_VALUE!=''"
-		o_message="Bitte geben Sie einen Titel ein"
-		o_focus="true"
-		o_store="false"
-	/>
+		<tml:[form-field] o_label="Titel" o_field="title"
+			o_validation="$E_VALUE!=''"
+			o_message="Bitte geben Sie einen Titel ein"
+			o_focus="true"
+			o_store="false"
+		/>
 	
-</tml:case>	
+	</tml:then>
+	
+	<tml:else>
+		<tml:[form-messages]/>		
+	</tml:else>
+	
+</tml:if>
