--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-attachments.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/delete-attachments.tml
@@ -23,19 +23,23 @@
 		_filenames = (request.getParameter("filenames")||"").split(",")
 
 		// check if some file is used in content modules
-		var settingsValues = CMM.getContentModulesSettingsData(content()).values();
 		_usedFiles=WGA.List();
-		for(let [index, filename] in _filenames){
-		
-			for(let value in Iterator(settingsValues)){
-				if(value instanceof java.util.List){
-					if(value.contains(filename))
+		var settings = CMM.getContentModulesSettingsData(content());
+		if(settings){
+			var settingsValues = settings.values();
+			for(let [index, filename] in _filenames){
+				for(let value in Iterator(settingsValues)){
+					if(_usedFiles.contains(filename))
+						continue;
+					if(value instanceof java.util.List){
+						if(value.contains(filename))
+							_usedFiles.add(filename)
+					}
+					else if(value==filename)
 						_usedFiles.add(filename)
 				}
-				else if(value==filename)
-					_usedFiles.add(filename)
+	
 			}
-
 		}
 	</tml:script>
 	Möchten Sie die folgenden Dateianhänge löschen?
