#00006109: CMM util:select-image: added "svg" as possible file extension

--- a/OpenWGA/plugins/cm-modules/design/tml/html/util/select-image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/util/select-image.tml
@@ -23,4 +23,4 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
-<tml:include ref="::select-file" o_file-extensions="jpg,jpeg,png,gif"/>
+<tml:include ref="::select-file" o_file-extensions="jpg,jpeg,png,gif,svg"/>
